--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title><meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-</head>
-<body>
-	<div id="demo">
-		
-	</div>
-</body>
-<script src="bundle.js"></script>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	</head>
+	<body>
+		<div id="demo">
+
+		</div>
+	</body>
+	<script src="bundle.js"></script>
 </html>
