--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title><meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<style>
+		body{
+			font-size: 16px
+		}
+	</style>
 </head>
 <body>
 	<div id="demo">
