--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title><meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<style>
-		body{
-			font-size: 16px
-		}
-	</style>
-</head>
-<body>
-	<div id="demo">
-		
-	</div>
-</body>
-<script src="bundle.js"></script>
+
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+		<link rel="stylesheet" href="./icontfont/font_amel523lzblhxgvi/iconfont.css" />
+		<!--<link rel="stylesheet" href="./icontfont/font_ky0dkdg57acyp66r/iconfont.css" />
+		<link rel="stylesheet" href="./icontfont/font_ppf0v6m99gtu766r/iconfont.css" />-->
+		<style>
+			body {
+				font-size: 16px
+			}
+		</style>
+	</head>
+
+	<body>
+		<div id="demo">
+
+		</div>
+	</body>
+	<script src="bundle.js"></script>
 
 </html>
