--- a/public/icontfont/font_amel523lzblhxgvi/demo_fontclass.html
+++ b/public/icontfont/font_amel523lzblhxgvi/demo_fontclass.html
@@ -66,6 +66,12 @@
                     <div class="fontclass">.icon-dushu</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-loading-copy-copy"></i>
+                    <div class="name">加载</div>
+                    <div class="fontclass">.icon-loading-copy-copy</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
