--- a/public/icontfont/font_amel523lzblhxgvi/demo_symbol.html
+++ b/public/icontfont/font_amel523lzblhxgvi/demo_symbol.html
@@ -99,6 +99,14 @@
                     <div class="fontclass">#icon-dushu</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-loading-copy-copy"></use>
+                    </svg>
+                    <div class="name">加载</div>
+                    <div class="fontclass">#icon-loading-copy-copy</div>
+                </li>
+            
         </ul>
 
 
