--- a/public/icontfont/font_amel523lzblhxgvi/demo_unicode.html
+++ b/public/icontfont/font_amel523lzblhxgvi/demo_unicode.html
@@ -86,6 +86,12 @@
                     <div class="code">&amp;#xe60a;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe509;</i>
+                    <div class="name">加载</div>
+                    <div class="code">&amp;#xe509;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
